# simul

./: .gitignore  README.md  package-lock.json  package.json
backend/: app.py  demucs_processor.py  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/Components/: AudioUploader.jsx
