[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "supremerkk",email = "70713255+supremerkk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "demucs (>=4.0.1,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "torch (>=2.2.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
